chore: fix images being too big on desktop

--- a/src/styles/post-body.scss
+++ b/src/styles/post-body.scss
@@ -53,12 +53,6 @@
 		visibility: visible;
 	}
 
-	img {
-		margin: 0 auto;
-		display: block;
-		max-width: 100%;
-	}
-
 	img[src$=".svg"] {
 		width: 100%;
 		max-height: 50vh;
